[150] [Shashank] | Correct spacing in questions

--- a/src/app/components/assessment-rating-and-recommendation/topic-level-assessment.component.css
+++ b/src/app/components/assessment-rating-and-recommendation/topic-level-assessment.component.css
@@ -39,7 +39,8 @@
 
   background-color: #45A0AC1D;
   height: 50px;
-  margin-top: 35px;
+  margin-top: 28px;
+  margin-bottom: 28px;
   width: 97%;
   color: #043D4E;
   font-size: 20px;
@@ -51,8 +52,6 @@
 }
 
 .question {
-  margin-top: 32px;
-  padding-bottom: 32px;
   padding-left: 15px;
   padding-right: 21px;
   opacity: 1;
